Added to readme

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -18,7 +18,7 @@
     "API_KEY = os.environ.get(\"ODDS_API_KEY\")\n",
     "\n",
     "REGIONS = [\"eu\"] # Betting regions\n",
-    "MARKETS = [\"h2h\", \"spreads\", \"totals\"] # Betting markets to choose from \n",
+    "MARKETS = [\"h2h\"] # Betting markets to choose from \n",
     "SPORT = \"basketball_nba_preseason\" # Sport to interact with. Choose in the print sports cell.\n",
     "\n",
     "THRESHOLD = 0.05 # # Accounts for percentage losses from vigorish"
