--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nathanzhao/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2.0 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import tqdm\n",
     "import json\n",
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,20 +70,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def filter_arbitrages(data, threshold):\n",
+    "def filter_arbitrages(data, markets, threshold):\n",
+    "    MAX_VAL = 10**9\n",
+    "\n",
     "    arbitrages = {}\n",
+    "    odds_counts = {}\n",
+    "\n",
+    "    if \"h2h\" in markets:\n",
+    "        odds_counts[\"h2h\"] = (MAX_VAL) * 3 # WIN, LOSE, DRAW --- some sports have draws others don't?\n",
+    "    \n",
     "    for match in data:\n",
     "        for bookmaker in match[\"bookmakers\"]:\n",
     "            for market in bookmaker[\"markets\"]:\n",
-    "                implied_odds = sum(1/outcome[\"price\"] for outcome in market[\"outcomes\"])\n",
+    "                market_name = market[\"key\"]\n",
+    "                if market_name == \"h2h\":\n",
+    "                    print(market)\n",
+    "                    implied_odds = sum(1/outcome[\"price\"] for outcome in market[\"outcomes\"])\n",
     "                \n",
     "                if implied_odds < 1 - threshold:\n",
     "\n",
     "                    match_name = f'{match[\"home_team\"]} vs. {match[\"away_team\"]}'\n",
+    "\n",
     "\n",
     "                    if implied_odds > arbitrages.get(match_name, (-1, -1, -1))[-1]:\n",
     "                        arbitrages[match_name] = {\"bookmaker\" : bookmaker[\"key\"], \"market\" : market[\"key\"], \"odds\" : implied_odds}\n",
@@ -84,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['soccer_brazil_serie_b', 'soccer_belgium_first_div', 'soccer_turkey_super_league', 'basketball_euroleague', 'baseball_mlb_world_series_winner', 'soccer_england_league2', 'soccer_netherlands_eredivisie', 'americanfootball_cfl', 'icehockey_sweden_hockey_league', 'soccer_conmebol_copa_libertadores', 'soccer_germany_liga3', 'soccer_italy_serie_a', 'soccer_norway_eliteserien', 'soccer_france_ligue_one', 'golf_pga_championship_winner', 'soccer_switzerland_superleague', 'soccer_finland_veikkausliiga', 'americanfootball_ncaaf', 'americanfootball_nfl_super_bowl_winner', 'golf_masters_tournament_winner', 'soccer_uefa_champs_league', 'icehockey_nhl', 'soccer_uefa_europa_league', 'soccer_france_ligue_two', 'basketball_nba', 'soccer_japan_j_league', 'soccer_uefa_europa_conference_league', 'basketball_wnba', 'soccer_sweden_superettan', 'soccer_brazil_campeonato', 'soccer_england_league1', 'icehockey_nhl_championship_winner', 'golf_the_open_championship_winner', 'basketball_nba_preseason', 'rugbyunion_world_cup', 'soccer_germany_bundesliga2', 'soccer_league_of_ireland', 'soccer_spain_segunda_division', 'soccer_usa_mls', 'soccer_mexico_ligamx', 'baseball_mlb', 'basketball_nba_championship_winner', 'icehockey_sweden_allsvenskan', 'soccer_efl_champ', 'soccer_germany_bundesliga', 'soccer_greece_super_league', 'soccer_denmark_superliga', 'soccer_poland_ekstraklasa', 'basketball_ncaab', 'soccer_epl', 'golf_us_open_winner', 'soccer_italy_serie_b', 'soccer_chile_campeonato', 'soccer_austria_bundesliga', 'soccer_sweden_allsvenskan', 'soccer_spain_la_liga', 'cricket_icc_world_cup', 'soccer_australia_aleague', 'americanfootball_nfl', 'mma_mixed_martial_arts', 'soccer_spl', 'soccer_england_efl_cup', 'boxing_boxing']\n"
+      "['soccer_uefa_europa_league', 'icehockey_nhl_championship_winner', 'soccer_netherlands_eredivisie', 'soccer_brazil_campeonato', 'soccer_poland_ekstraklasa', 'soccer_norway_eliteserien', 'soccer_usa_mls', 'soccer_mexico_ligamx', 'soccer_italy_serie_b', 'soccer_finland_veikkausliiga', 'soccer_austria_bundesliga', 'soccer_germany_bundesliga', 'basketball_euroleague', 'rugbyunion_world_cup', 'soccer_uefa_euro_qualification', 'soccer_spain_la_liga', 'soccer_epl', 'soccer_belgium_first_div', 'soccer_france_ligue_two', 'basketball_nba_championship_winner', 'soccer_australia_aleague', 'soccer_england_league1', 'basketball_wnba', 'soccer_sweden_superettan', 'soccer_england_league2', 'basketball_ncaab', 'soccer_japan_j_league', 'soccer_spain_segunda_division', 'soccer_uefa_europa_conference_league', 'cricket_icc_world_cup', 'icehockey_sweden_hockey_league', 'soccer_england_efl_cup', 'soccer_germany_bundesliga2', 'soccer_denmark_superliga', 'golf_masters_tournament_winner', 'soccer_uefa_champs_league', 'americanfootball_ncaaf', 'golf_the_open_championship_winner', 'basketball_nba_preseason', 'golf_us_open_winner', 'soccer_efl_champ', 'americanfootball_nfl_super_bowl_winner', 'soccer_france_ligue_one', 'soccer_turkey_super_league', 'soccer_chile_campeonato', 'americanfootball_nfl', 'golf_pga_championship_winner', 'soccer_brazil_serie_b', 'soccer_korea_kleague1', 'boxing_boxing', 'mma_mixed_martial_arts', 'soccer_china_superleague', 'soccer_conmebol_copa_libertadores', 'soccer_greece_super_league', 'soccer_germany_liga3', 'basketball_nba', 'icehockey_sweden_allsvenskan', 'soccer_spl', 'soccer_switzerland_superleague', 'baseball_mlb', 'soccer_sweden_allsvenskan', 'soccer_italy_serie_a', 'baseball_mlb_world_series_winner', 'icehockey_nhl']\n"
      ]
     }
    ],
@@ -103,15 +123,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Remaining requests 477\n",
-      "Used requests 23\n"
+      "Remaining requests 473\n",
+      "Used requests 27\n"
      ]
     }
    ],
@@ -121,11 +141,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'key': 'h2h', 'last_update': '2023-10-16T05:36:42Z', 'outcomes': [{'name': 'Atlanta Hawks', 'price': 2.08}, {'name': 'Indiana Pacers', 'price': 1.76}]}\n",
+      "{'key': 'h2h', 'last_update': '2023-10-16T05:36:53Z', 'outcomes': [{'name': 'Atlanta Hawks', 'price': 2.03}, {'name': 'Indiana Pacers', 'price': 1.8}]}\n",
+      "{'key': 'h2h', 'last_update': '2023-10-16T05:36:42Z', 'outcomes': [{'name': 'Brooklyn Nets', 'price': 2.1}, {'name': 'Philadelphia 76ers', 'price': 1.72}]}\n",
+      "{'key': 'h2h', 'last_update': '2023-10-16T05:36:53Z', 'outcomes': [{'name': 'Brooklyn Nets', 'price': 2.09}, {'name': 'Philadelphia 76ers', 'price': 1.75}]}\n",
+      "{'key': 'h2h', 'last_update': '2023-10-16T05:36:42Z', 'outcomes': [{'name': 'Houston Rockets', 'price': 1.53}, {'name': 'San Antonio Spurs', 'price': 2.5}]}\n",
+      "{'key': 'h2h', 'last_update': '2023-10-16T05:36:53Z', 'outcomes': [{'name': 'Houston Rockets', 'price': 1.57}, {'name': 'San Antonio Spurs', 'price': 2.43}]}\n",
+      "{'key': 'h2h', 'last_update': '2023-10-16T05:36:53Z', 'outcomes': [{'name': 'Phoenix Suns', 'price': 1.46}, {'name': 'Portland Trail Blazers', 'price': 2.73}]}\n",
+      "{'key': 'h2h', 'last_update': '2023-10-16T05:36:42Z', 'outcomes': [{'name': 'Phoenix Suns', 'price': 1.42}, {'name': 'Portland Trail Blazers', 'price': 2.54}]}\n",
+      "{}\n"
+     ]
+    }
+   ],
    "source": [
-    "arbitrages = filter_arbitrages(pricings_data, THRESHOLD) "
+    "arbitrages = filter_arbitrages(pricings_data, MARKETS, THRESHOLD) \n",
+    "print(arbitrages)"
    ]
   },
   {
@@ -169,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
